fix alignment once more lol

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
 	text-align: center;
 	max-height: 20vh;
 	background-color: #efb54a;
-	font-family: 'Yanone Kaffeesatz', sans-serif;
+	font-family: "Yanone Kaffeesatz", sans-serif;
 }
 .instructions {
 	position: absolute;
-	top: 60%;
+	top: 70%;
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -45,7 +45,6 @@ h1 {
 	margin-top: 0;
 	background-color: white;
 }
-
 
 .tongue-chart {
 	max-width: 40%;
@@ -93,4 +92,4 @@ h1 {
 	.instructions {
 		top: 75%;
 	}
-} 
+}
